css/main.css
@font-face {
	font-family: FreeSans;
	src: url(/assets/FreeSans.ttf);
}

html,
body {
	width: 100%;
	height: 100%;
	padding: 0px;
	margin: 0px;
	border: none;
	display: flex;
	flex-direction: column;
	background-color: #333;

	font-family: FreeSans, Sans;
	font-size: 20px;

	overflow: hidden;
}

* {
	color: #efefef;
}

#loadingScreen {
	gap: 1em;
	width: 100%;
	height: 100%;
	display: flex;
	position: absolute;
	text-align: center;
	align-items: center;
	justify-content: center;
	background-color: #333;
	flex-direction: column;
	z-index: 999999;
	transition: opacity 0.5s linear;
	opacity: 1;
}

#loadingScreen.loaded {
	opacity: 0;
	pointer-events: none;
}

#loadingScreen .icon {
	max-height: 25%;
}

.hidden {
	display: none !important;
}

::-webkit-scrollbar {
	width: 18px;
}

::-webkit-scrollbar-track {
	background: #383838;
}

::-webkit-scrollbar-thumb {
	background: #444;
}

::-webkit-scrollbar-thumb:hover {
	background: #555;
}

#topBar {
	display: flex;
	width: 100%;
	min-height: 2.5em;
	height: 2.5em;
	background-color: #222222;
}

#channelList {
	flex-grow: 1;
	overflow-x: auto;
	overflow-y: hidden;
	display: flex;
	scrollbar-width: none;
}

#channelList>* {
	display: flex;
	padding: 0.5em;
	align-items: center;
	background-color: #363636;
	gap: 0.25em;
	margin: 0.1em;
}

#channelList>.active {
	background-color: #2d4c21;
}

#channelList>*>.closeButton {
	display: none;
}

#channelList>.active>.closeButton {
	font-size: 0.65em;
	text-align: center;
	display: block;
	background-color: #1c1c1c;
	width: 2em;
	height: 2em;
}

#channelList .channel {
	color: rgb(156, 156, 156);
	position: relative;
}

#channelList .channel.unread {
	color: white;
}

#channelList .channel.mentioned::before {
	width: 0.5em;
	height: 0.5em;
	position: absolute;
	right: 0.1em;
	top: 0.1em;
	background-color: orange;
	border-radius: 1em;
	content: ' ';
}

.inputBar {
	display: flex;
	gap: 0.25em;
	width: 100%;
	min-height: 3em;
	height: 3em;
	background-color: #222222;
	padding: 0.25em;
	box-sizing: border-box;
}

#textInput {
	color: #EEE;
	background-color: #333;
	border: none;
	border-radius: 6px;
	flex-grow: 1;
	font-size: 1em;
	resize: none;
	vertical-align: middle;
	font-family: FreeSans, Sans;
	padding: 0.25em;

	border-left: 0.25em solid #555;
}

#textInput.connected {
	border-left: 0.25em solid lime;
}

#textInput.disconnected {
	border-left: 0.25em solid red;
}

button {
	background-color: #383838;
	border: none;
	border-radius: 8px;
	font-size: 1.25em;
	cursor: pointer;
}

.square {
	aspect-ratio: 1;
}

#tlbox {
	flex-grow: 1;
	overflow-y: hidden;
}

#tlbox>* {
	height: 100%;
	overflow-y: auto;
}

#tlbox>#emptyMessage {
	text-align: center;
}

#scrollToBottom {
	cursor: pointer;
	display: flex;
	justify-content: center;
	align-items: center;
	background-color: #444;
	opacity: 0.9;
	min-height: 1.5em;
	margin-top: -1.5em;
}

.timeline .upload {
	display: flex;
	flex-direction: column;
}

.timeline .reply {
	font-size: 0.75em;
	cursor: pointer;
}

.timeline .highlight {
	animation-name: replyHighlight;
	animation-duration: 1s;
	animation-play-state: running;
}

.timeline .blocked {
	display: none;
}

.message {
	display: flex;
	flex-direction: row;
	align-items: center;

	overflow-wrap: break-word;
	word-wrap: break-word;
	word-break: break-all;
	word-break: break-word;
	hyphens: auto;
}

@keyframes replyHighlight {

	0%,
	50%,
	100% {
		background-color: transparent;
	}

	25%,
	75% {
		background-color: white;
	}
}

.timeline>* .time {
	padding-right: 0.3em;
	opacity: 50%;
	word-break: keep-all;
}

.timeline>* a.link {
	color: #3a3ae5;
}

.timeline>* {
	padding: 0.2em;
	padding-left: 0.5em;
	width: calc(100% - 0.7em);

	--bg-color: #333;
	background-color: var(--bg-color);

	display: flex;
}

.timeline>:nth-child(2n) {
	background-color: color-mix(in srgb, var(--bg-color), #000 10%)
}

.timeline>.announcement {
	--bg-color: rgb(199, 195, 5);
}

.timeline>.mentioned {
	--bg-color: rgb(168 93 6);
}

.timeline>.first {
	--bg-color: rgb(58, 128, 33);
}

.timeline>.sub {
	--bg-color: #9146FF;
}

.timeline>.raid {
	--bg-color: #e87044;
}

.timeline>.redeem {
	--bg-color: #4197cc;
}

.mention {
	font-weight: 600;
}

.badges>img {
	height: 1.5em;
	margin-right: 8px;
	vertical-align: bottom;
	border-radius: 4px;
}

.emote *
{
	transform-style: flat;
}

.emote {
	transform-style: preserve-3d;
	display: inline-grid;
	text-align: center;
	align-items: end;
	vertical-align: bottom;
	justify-items: center;
	font-size: 1.5em;
	min-width: 1em;
	height: 1em;
	overflow: hidden;
}

.emote img {
	height: 1em;
	grid-column: 1;
	grid-row: 1;
}

.emote .emoteTooltip {
	font-size: 1rem;
	user-select: none;
}

.gradient {
	background: -webkit-linear-gradient(#eee, #333);
	-webkit-background-clip: text;
	-webkit-text-fill-color: transparent;
}

#emoteSuggestions {
	position: absolute;
	top: 0px;
}

.popupMenu {
	background: #222;
	display: flex;
	flex-direction: column;
	position: absolute;
	user-select: none;
}

#currentAccountAvatar {
	max-width: 1.25em;
	height: 1.25em;
}

.tooltip {
	pointer-events: none;
	user-select: none;
	background-color: rgba(0, 0, 0, 0.75);
	border-radius: 0.25em;
	padding: 0.5em;
	position: absolute;
}

.contextMenu {
	pointer-events: all;
	padding: 0px;
	border-radius: 0px;
	box-shadow: black 0px 0px 5px;
}

.contextMenu button {
	border-radius: 0px;
}

.contextMenu button:hover {
	background-color: #333;
	border-radius: 0px;
}

.contextMenu hr {
	height: 1px;
	padding: 0px;
	margin: 0px;
	width: 100%;
	border: none;
	background-color: #1c1c1c;
}

.emoteTooltip {
	display: flex;
	flex-direction: column;
	align-items: center;
	text-align: center;
	max-width: 20em;
}

.emoteTooltip>img {
	height: 3em;
}

.message.deleted {
	opacity: 0.25;
}

.message.deletion {
	opacity: 0.5;
	cursor: pointer;
}

#dropZone {
	box-sizing: border-box;
	display: none;
	position: fixed;
	width: 100%;
	height: 100%;
	left: 0;
	top: 0;
	z-index: 99999;
	background: #000000c0;

	flex-direction: column;
	justify-content: center;
	align-items: center;
	gap: 0.75em;
}

#dropZone::before {
	font-size: 3em;
}

input {
	color: black;
}

input:placeholder-shown {
	text-overflow: ellipsis;
}

#emojiList {
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: flex-start;
	flex-grow: 1;
	overflow-y: scroll;
	background: #222;
}

#emotePages {
	flex-grow: 1;
}

#emojiList .emote {
	margin: 0.1em;
	padding: 0.2em;
	cursor: pointer;
	background-color: #1c1c1c;
	border-radius: 0.5em;
}

#emoteTabs>* {
	padding: 0.25em;
	align-items: center;
	background-color: #363636;
	margin: 0.2em;
	gap: 0.1em;
}

#emoteTabs>.active {
	background-color: #2d4c21;
}

#replyingToBar {
	padding: 0.35em;
	background: #222222;
	display: flex;
	flex-direction: column;
}

#replyingToBar>* {
	display: flex;
	flex-direction: row;
}

#replyContent {
	flex-grow: 1;
}

.messageMenu {
	display: flex;
	flex-direction: column;
	width: 15em;
}

.settings>.content {
	padding: 3em;
	max-width: 30em;
	margin: auto;
}

.settings h2 {
	margin: 0.25em 0em;
}

.settings h3 {
	margin: 0.25em 0em;
}

.settings input[type=text] {
	width: 100%;
}

.settings input[type=range] {
	width: calc(100% - 7.9em);
}

.settings input[type=number].forSlider {
	width: 7em;
}

.settings .blocklist {
	height: 8em;
	overflow-y: scroll;
	width: 100%;

	background-color: #222222;
	border: none;
	border-radius: 0.25em;
}

.settings .blocklist option:checked {
	background-color: #3a3ae5;
}

.hidehchatuserbadge .badge-hchat {
	display: none;
}

.hideappinstallbutton #installButton {
	display: none;
}

.autocomplete
{
	max-height: 50vh;
	max-width: 50vh;
	overflow-y: auto;

	overflow-wrap: break-word;
	word-wrap: break-word;
	word-break: break-all;
	word-break: break-word;
}

.autocomplete > *
{
	align-items: center;
	display: flex;
	gap: 0.5em;
}

.autocomplete > *:nth-child(2n)
{
	background-color: #000A;
}

.autocomplete > .active
{
	background-color: #2d4c21;
}

.autocomplete img
{
	height: 1.5em;
}

.about
{
	display: flex;
	gap: 0.5em;
}

.about .links
{
	gap: 0.5em;
	text-align: center;
}

.about > *
{
	display: flex;
	flex-direction: column;
	justify-content: center;
}

.about .icon{
	height: 8em;
}

